syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "CommStagePassedRequestProtobuf";

message	CommStagePassedRequest  {
	optional	uint32	type = 10;
	optional	uint32	stage = 11;
}