syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "PlayerInfoProtobuf";

message	PlayerInfo  {
	optional	string	identifier = 10;
	repeated	HeroBasicInfo	heros = 11;
	repeated	PlayerItem	teams = 12;
	repeated	PlayerItem	items = 13;
	repeated	PlayerString	strings = 14;
	repeated	Giftbag	giftbags = 15;
	optional	PlayerTemporaryBackpack	backpack = 16;
	optional	PlayerStore	store = 17;
	repeated	Ranklist	ranks = 18;
	repeated	PlayerItem	archives = 19;
	repeated	PlayerItem	teams_pvp = 20;
}